activate and deactivate companies
