# swagger/definitions/swagger.yml
@@ -144,11 +144,12 @@ paths:
             application/json:
               schema:
                 $ref: "#components/responses/NotFound"
-    delete:
+  /companies/{id}/deactivate:
+    put:
       tags:
         - Companies
-      summary: Delete Company
-      description: Delete a Company
+      summary: Deactivate Company
+      description: Deactivate an existing Company
       security:
         - bearerAuth: []
       parameters:
@@ -160,12 +161,18 @@ paths:
             type: integer
             format: int64
       responses:
-        '204':
-          description: Company Deleted
+        '200':
+          description: Company successfully deactivated.
           content:
             application/json:
               schema:
                 $ref: "#components/schemas/Company"
+        '401':
+          description: Unauthorized.
+          content:
+            application/json:
+              schema:
+                $ref: "#components/responses/Unauthorized"
         '403':
           description: Forbidden.
           content:
@@ -173,7 +180,48 @@ paths:
               schema:
                 $ref: "#components/responses/Forbidden"
         '404':
-          description: Company not found.
+          description: User not found.
+          content:
+            application/json:
+              schema:
+                $ref: "#components/responses/NotFound"
+  /companies/{id}/activate:
+    put:
+      tags:
+        - Companies
+      summary: Activate Company
+      description: Activate an existing Company
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          description: Company id
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: Company successfully activated.
+          content:
+            application/json:
+              schema:
+                $ref: "#components/schemas/Company"
+        '401':
+          description: Unauthorized.
+          content:
+            application/json:
+              schema:
+                $ref: "#components/responses/Unauthorized"
+        '403':
+          description: Forbidden.
+          content:
+            application/json:
+              schema:
+                $ref: "#components/responses/Forbidden"
+        '404':
+          description: User not found.
           content:
             application/json:
               schema:
